# vllm-eval-harness

./: .gitignore  .pre-commit-config.yaml  ARCH.md  CLAUDE.md  README.md  build_golden.py  eval-nightly.yaml  eval-phase1.yaml  eval.yaml  eval_metrics.py  plan.md  pooled_metrics.py  pyproject.toml
.claude-plugin/: marketplace.json
cases/distributed/: input.yaml
cases/entrypoints/: input.yaml
cases/lora/: input.yaml
cases/v1_e2e/: input.yaml
datasets/: dataset_170433.csv  dataset_175426.csv  dataset_180899.csv  dataset_187473.csv
judges/: __init__.py  classification_f1.py  classification_judge.py  cost_per_group.py  cost_per_test.py  f1_score.py  grouping_ari.py  phase_delta.py
nightly-cases/170433/: input.yaml
nightly-cases/175426/: input.yaml
nightly-cases/180899/: input.yaml
nightly-cases/187473/: input.yaml
results/: SUMMARY.md  all_cc.json  basic_cc.json  compile_cc.json  distributed_not_cc.json  entrypoints_cc.json  review_input_1.json  review_input_2.json  review_input_3.json  review_output_2.json  v1_e2e_not_cc.json
scripts/: fp_fn_report.py  setup_workspace.py
tmp/: eval-config.yaml  optimize-config.yaml
vllm-test-audit/: README.md
vllm-test-audit/.claude-plugin/: plugin.json
vllm-test-audit/agents/: audit-agent.md  coordinator-agent.md  review-agent.md
vllm-test-audit/hooks/: hooks.json
vllm-test-audit/results/: all_cc.json  basic_not_cc.json  distributed_cc.json  entrypoints_not_cc.json  golden.csv  lora_cc.json  lora_not_cc.json  review_input_2.json  review_input_3.json  review_output_1.json  review_output_3.json  (+1 more)
(+74 files in other folders)
