[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vllm-eval-harness"
version = "0.1.0"
description = "Evaluation harness for vllm-test-audit"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "scikit-learn>=1.3,<1.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pyrefly>=1.0",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["judges*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pyrefly]
project_excludes = ["vllm-test-audit/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
